# daMatlab

./: CMakeLists.txt  Connection.h  DataReader.h  GeometryQueue.h  MatlabGeometry.h  MatlabModule.h  README.md  Thread.h  templateModule.h
matlab/: Omegalib.m  getColorValues.m  getValues.m  teapot.m  test_workflow.m
python/: MatlabModule.py  spin_navigation.py  templateModuleView.py
src/: Connection.cpp  DataReader.cpp  GeometryQueue.cpp  MatlabGeometry.cpp  MatlabModule.cpp  Thread.cpp  templateModule.cpp
